# ChangeLog for dev-cpp/gtkmm
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.145 2008/07/11 09:09:04 remi Exp $

  11 Jul 2008; Rémi Cardona <remi@gentoo.org> -gtkmm-2.10.10.ebuild,
  -gtkmm-2.12.3.ebuild, -gtkmm-2.12.4.ebuild, -gtkmm-2.12.5.ebuild:
  clean up

  11 Jul 2008; Rémi Cardona <remi@gentoo.org>
  +files/gtkmm-1.2.9-gcc4.3.patch, gtkmm-1.2.9-r2.ebuild:
  patch for gcc 4.3 build error, fixes bug #218403

  10 Jul 2008; Rémi Cardona <remi@gentoo.org> gtkmm-1.2.9-r2.ebuild,
  gtkmm-2.2.12.ebuild, gtkmm-2.10.10.ebuild, gtkmm-2.12.1.ebuild,
  gtkmm-2.12.3.ebuild, gtkmm-2.12.4.ebuild, gtkmm-2.12.5.ebuild,
  gtkmm-2.12.7.ebuild:
  update HOMEPAGE

*gtkmm-2.12.7 (11 Apr 2008)

  11 Apr 2008; Rémi Cardona <remi@gentoo.org> +gtkmm-2.12.7.ebuild:
  Bump to 2.12.7, small bugfix and fixes for gcc 4.3

*gtkmm-2.12.5 (12 Mar 2008)

  12 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org> +gtkmm-2.12.5.ebuild:
  bump to 2.12.5, more gcc 4.3 fixes

*gtkmm-2.12.4 (10 Feb 2008)

  10 Feb 2008; Gilles Dartiguelongue <eva@gentoo.org> +gtkmm-2.12.4.ebuild:
  bump to 2.12.4, gcc 4.3 fixes and implement Gtk::RecentAction

*gtkmm-2.12.3 (16 Dec 2007)

  16 Dec 2007; Gilles Dartiguelongue <eva@gentoo.org> +gtkmm-2.12.3.ebuild:
  bump to 2.12.3

  23 Nov 2007; Jeroen Roovers <jer@gentoo.org> gtkmm-2.12.1.ebuild:
  Stable for HPPA (bug #198845).

  19 Nov 2007; Markus Rothe <corsair@gentoo.org> gtkmm-2.12.1.ebuild:
  Stable on ppc64; bug #198845

  17 Nov 2007; nixnut <nixnut@gentoo.org> gtkmm-2.12.1.ebuild:
  Stable on ppc wrt bug 198845

  16 Nov 2007; Daniel Gryniewicz <dang@gentoo.org> gtkmm-2.12.1.ebuild:
  Bump glibmm dep; bug #199366

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> gtkmm-2.12.1.ebuild:
  sparc stable wrt #198845

  14 Nov 2007; Raúl Porcel <armin76@gentoo.org> gtkmm-2.12.1.ebuild:
  alpha/ia64 stable wrt #198845
