@@ -1,6 +1,9 @@
 # ChangeLog for dev-cpp/gtkmm
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.145 2008/07/11 09:09:04 remi Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gtkmm/ChangeLog,v 1.146 2008/07/16 08:46:50 remi Exp $
+
+  16 Jul 2008; Rémi Cardona <remi@gentoo.org> gtkmm-2.12.7.ebuild:
+  don't build tests unless asked to, fixes bug #225957
 
   11 Jul 2008; Rémi Cardona <remi@gentoo.org> -gtkmm-2.10.10.ebuild,
   -gtkmm-2.12.3.ebuild, -gtkmm-2.12.4.ebuild, -gtkmm-2.12.5.ebuild:
